# gmab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  release.yml
gmab/: CHANGELOG.md  __init__.py  cli.py  pyproject.toml
gmab/commands/: __init__.py  configure.py  list.py  spawn.py  terminate.py
gmab/config/: general.json.sample  providers.json.sample
gmab/providers/: __init__.py  _template.py  aws.py  base.py  hetzner.py  linode.py  ovh.py  registry.py
gmab/utils/: __init__.py  config_loader.py  naming.py  output.py  paths.py
tests/commands/: test_cli_list.py  test_cli_terminate.py  test_configure.py  test_list.py  test_spawn.py  test_terminate.py
tests/providers/: provider_contract.py  test_aws.py  test_base.py  test_hetzner.py  test_linode.py  test_ovh.py  test_registry.py
tests/support/: config_env.py  contracts.py  fakes.py  http.py
tests/utils/: test_config_loader.py  test_output.py  test_paths.py
