[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmab"
version = "0.1.4"
description = "Give Me A Box - CLI tool to spawn, list, and manage temporary cloud boxes"
readme = "README.md"
authors = [
    {name = "Steve Cannivy", email = "steve@roudeleiw.lu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["cloud", "cli", "devops", "aws", "linode", "hetzner"]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "boto3>=1.26.0",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/superfishlu/gmab"
"Bug Tracker" = "https://github.com/superfishlu/gmab/issues"

[project.scripts]
gmab = "gmab.cli:main"

[tool.setuptools]
packages = ["gmab", "gmab.commands", "gmab.providers", "gmab.utils"]